@@ -28,9 +28,11 @@ Feature: Cucumber command line
         @two @three
         Scenario: Missing
           Given missing
+            Undefined step: "missing" (Cucumber::StepMother::Undefined)
+            features/sample.feature:6:in `Given missing'
 
       1 scenario
-      1 undefined step
+      1 failed step
 
       """
 
